added styling for contact page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <ul>
         <li><a href="index.html">Startseite</a></li>
         <li><a href="wochenmenu.html">Wochenmenüs</a></li>
-        <li><a href="#kontakt">Kontakt</a></li>
+        <li><a href="kontaktaufnahme.html">Kontakt</a></li>
       </ul>
     </nav>
   </header>
