little styling changes

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
   <section id="kontakt">
     <h2>Kontakt</h2>
     <form id="kontaktformular">
-      <label for="email">E-Mail:</label>
-      <input type="email" id="email" name="email" required>
-      <button type="submit">Absenden</button>
+      <label>Im Vogelsang 8, A-3340 Waidhofen an der Ybbs</label><br><br>
+      <label>Tel.: +43 7442 / 52590-0, E-Mail: office@htlwy.at</label>
     </form>
   </section>
 
