--- a/wochenmenu.html
+++ b/wochenmenu.html
@@ -88,6 +88,13 @@
 
 
   <footer>
+    <section id="kontakt">
+        <h2>Kontakt</h2>
+        <form id="kontaktformular">
+            <label>Im Vogelsang 8, A-3340 Waidhofen an der Ybbs</label><br><br>
+            <label>Tel.: +43 7442 / 52590-0, E-Mail: office@htlwy.at</label>
+        </form>
+    </section>
     &copy; 2023 Kantine HTL Waidhofen/Ybbs
   </footer>
 </body>
