starting page updated

--- a/index.html
+++ b/index.html
@@ -19,13 +19,7 @@
     </nav>
   </header>
 
-  <section id="kontakt">
-    <h2>Kontakt</h2>
-    <form id="kontaktformular">
-      <label>Im Vogelsang 8, A-3340 Waidhofen an der Ybbs</label><br><br>
-      <label>Tel.: +43 7442 / 52590-0, E-Mail: office@htlwy.at</label>
-    </form>
-  </section>
+  <h1>Willkommen in der HTL-Kantine</h1>
 
   <footer>
     <section id="kontakt">
